<resources>
    <string name="app_name">AD340 DatingApp</string>
    <string name="AssignmentRequirement">Aguiniga, Johart 5/04/20</string>
    <string name="dating_app">Dating App</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_occupation">Please Enter Your Occupation</string>
    <string name="description_about">Please Enter a Description of yourself</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="back">BACK</string>
    <string name="welcome_imperial_citizen_the_emperor_protects">Welcome Imperial Citizen. The Emperor Protects</string>
    <string name="heresy_for_none_registry_await_inquisition_inquiry">NON REGISTRY IS HERESY, THE INQUISITION WATCHES</string>
    <string name="description">Description</string>
    <string name="please_enter_your_age">Please Enter Your Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="font_text">monospace</string>
    <string name="porifle_tab">profile</string>
    <string name="proifle_tab">profile_tab</string>
    <string name="settings_tab">Settings</string>
    <string name="matches_tab">Matches</string>
    <string name="bar_title">Menu</string>
    <string name="profiles_tab">Profiles</string>
    <string name="app_menu">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is where the Settings fragment goes</string>
    <string name="description_text">Have you heard about the Rules of Acquisition</string>
    <string name="age_hint">Age</string>
    <string name="quark">Quark</string>
    <string name="settings_title">Settings</string>
    <string name="matches_time_hint">Matches Time</string>
    <string name="max_distance_search_hint">Max Distance Search</string>
    <string name="enter_the_maximum_distance_search_in_miles">Enter the Maximum Distance Search (in Miles)</string>
    <string name="please_enter_a_gender">Please Enter a Gender</string>
    <string name="gender_hint">Gender</string>
    <string name="enter_private_public_account_preference">Enter Private/Public Account Preference</string>
    <string name="interested_age_range_hint">Interested Age Range</string>
    <string name="please_enter_a_preferred_age_range">Please Enter a Preferred Age Range</string>
    <string name="please_enter_a_daily_matches_reminder_time">Please Enter a Daily Matches Reminder Time</string>
    <string name="update_button">UPDATE</string>
    <string name="johartaguiniag_gmail_com">johartaguiniag@gmail.com</string>
    <string name="email_hint">email</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>

    <string name="KEY_EMAIL">email</string>
    <string name="FAKE_EMAIL">fakeuser@google.com</string>






    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>
    <string name="daily_matches_reminder_time">Daily Matches Reminder Time</string>
    <string name="maximum_distance_search">Maximum Distance Search</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="please_enter_account_type">Please Enter Account Type</string>
    <string name="enter_interested_age_range">Enter Interested Age Range</string>
</resources>
