<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ultramar"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="53dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="245dp"
        android:layout_height="116dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="497dp"
        android:text="@string/welcome_imperial_citizen_the_emperor_protects"
        android:textAlignment="center"
        android:textColor="#B60404"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="323dp"
        android:text="@string/heresy_for_none_registry_await_inquisition_inquiry"
        android:textAlignment="center"
        android:textColor="#A10707"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>